@@ -4,6 +4,13 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2016-01-15
+ * Thanks to Chan Wilson for all his feedback on this set of changes.
+ * Added a message to wing class to let you know where you can access your newly created object.
+ * Added Test::Trap and JSON::XS to bin/setup/03_install_perl_modules.sh to make installs flow easier.
+ * Added a note as to where you can find the logs in README.txt.
+ * Indicated what services need to be restarted after you add a class in README.txt. 
+
 2016-01-12
  * Removed fetch_create_options from wing.angular.js because fetch_options is better.
  * Added WingAngular.pod documentation for wing.angular.js.
